--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "@types/pg": "^8.11.11",
     "hono": "^4.7.4",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.14.0"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/jsonwebtoken": "^9.0.9"
   }
 }
